fix: node alias too long style

--- a/src/components/Header/CKBNodeComp/style.module.scss
+++ b/src/components/Header/CKBNodeComp/style.module.scss
@@ -127,10 +127,13 @@
   width: 100%;
   border-top: 1px solid rgb(0 0 0 / 20%);
   margin-top: 16px;
-  padding: 16px 0;
+  margin-bottom: 16px;
+  padding-top: 16px;
   display: flex;
   flex-direction: column;
   gap: 8px;
+  overflow-y: scroll;
+  max-height: 320px;
 }
 
 .node {
@@ -152,6 +155,9 @@
   .nodeAlias {
     font-size: 16px;
     font-weight: bold;
+    color: black;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .nodeSubtitle {
@@ -166,6 +172,7 @@
   align-items: center;
   border: none;
   background: transparent;
+  color: black;
 
   &:hover {
     color: var(--primary-color);
